@startuml "Diagrama de Classes - Biblioteca Digital"
' ======= ENTIDADES =======
class Usuario {
    +Long id
    +String username
    +String password
    +String email
    +boolean emailVerificado
    +String codigoVerificacao
    +boolean admin
    +String fotoUrl
    +boolean ativo
}

class LivroLocal {
    +Long id
    +String titulo
    +String autor
    +String isbn10
    +String isbn13
    +String capaUrl
    +boolean disponivel
    +int quantidade
}

class LivroOpenLibrary {
    +String titulo
    +List<String> autores
    +Integer anoPublicacao
    +String capaUrl
    +String editionKey
    +List<String> isbns
}

class DetalhesLivroOpenLibrary {
    +String titulo
    +String subtitulo
    +String dataPublicacao
    +String editora
    +String numeroPaginas
    +String sinopse
    +String capaUrl
    +String editionKey
    +List<String> autores
    +List<String> generos
    +List<String> isbn10
    +List<String> isbn13
}

class ResultadoBuscaOpenLibrary {
    +List<LivroOpenLibrary> livros
}

class Emprestimo {
    +Long id
    +Usuario usuario
    +String isbn
    +String titulo
    +LocalDateTime dataEmprestimo
    +LocalDateTime dataDevolucaoPrevista
    +LocalDateTime dataDevolucaoReal
    +String editionKey
    +BigDecimal multa
}

class ListaLivro {
    +Long id
    +Usuario usuario
    +String nomeLista
    +String isbn
    +String titulo
}

' ======= RELACIONAMENTOS =======
Usuario --  Emprestimo : realiza >
Usuario --  ListaLivro : possui >
Emprestimo -- LivroLocal : refere >
ListaLivro *-- LivroLocal : contém >
ListaLivro *-- LivroOpenLibrary : contém >

ResultadoBuscaOpenLibrary *-- LivroOpenLibrary
DetalhesLivroOpenLibrary ..> LivroOpenLibrary : detalha >

@enduml